--- a/appsettings.json
+++ b/appsettings.json
@@ -6,6 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": { 
-    "DefaultConnection": "Server=LTIN649824\\SQLEXPRESS;Database=HospitalDB;Trusted_Connection=True;Encrypt=False"  }
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=LTIN650464\\SQLEXPRESS;Database=HospitalDB;Trusted_Connection=True;Encrypt=False"
+  }
 }
